2011-04-27  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/extern/__init__.py:
	  Put paisley on PYTHONPATH.

2011-04-18  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/main.py:
	  Don't use filters if they aren't specified.

2011-04-16  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/common/tcommand.py:
	  remove reactor code.
	* python/mushin/command/main.py:
	  work in reactor code which should move to an interpreter method.
	  Try to fix the edit command in interpreter mode.

2011-04-15  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/common/tcommand.py:
	  Since any command can be run in a loop, commands should not
	  invoke the reactor directly to stop.

2011-04-15  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/main.py:
	  Make sure we always have a return value.

2011-04-15  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/main.py:
	  Move log to main()

2011-04-15  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/model/couch.py:
	  Remove fromDict, something similar is now in paisley mushin branch.

2011-04-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* bin/mushin-notify:
	  add connectionLost handler

2011-04-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/common/app.py:
	  Set dbName and host.
	* python/mushin/command/list.py:
	* python/mushin/command/main.py:
	  Use app.Server instead for some operations, removing chunks of
	  code.

2011-04-08  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/list.py:
	* python/mushin/command/main.py:
	* python/mushin/model/couch.py:
	  All view code now uses paisley.  Time to rip out the last
	  bit of couchdb-python ?

2011-04-08  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/project.py:
	  Use the new views.